package bestelsysteem.model;

public record ErrorObject(String message, String type, String friendlyMessage) {

}
